2003-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c: (SetMagickInfo): Don't mask failure to
	read magic.mgk.
	* magick/constitute.c (ReadImage): Don't overwrite specific
	exception info.
	* magick/nt_base.c (NTResourceToBlob): Add logging similar
	to that used in IsAccessible() in order to make operation
	more clear.
	* magick/module.c (FindMagickModule): Removed extraneous
	"Searching for module file" log event.
	(GetModuleBlob): Under Windows, don't clear or overwrite
	an existing exception.
	* magick/nt_base.h: Imported some obscure defines from
	magick\magick_config.h.
	* VisualMagick/magick/magick_config.h.in: Improved description
	text and formatting.  Moved some obscure defines to
	magick/nt_base.h.
	* locale/C.mgk: Added a "RegistryKeyLookupFailed" error message.
	* magick/type.c (GetTypeBlob): Report registry key lookup
	failures. Also ensure correct return value when an error is
	reported.
	* magick/log.c (GetLogBlob): Report registry key lookup failures.
	* magick/delegate.c (ReadConfigureFile): Report registry key
	lookup failures.	
	* magick/blob.c (GetConfigureBlob): Report registry key lookup
	failures. Also ensure correct return value when an error is
	reported.	
	* magick/module.c (FindMagickModule): Report registry key lookup
	failures. Also ensure correct return value when an error is
	reported.
	* magick/nt_base.c (NTRegistryKeyLookup): Simplify base key lookup
	code, and improve coding style.	
	* coders/logo.c, Copyright.txt, www/Copyright.html: Acknowledge
	and respect the XFig copyright.
	* VisualMagick/installer/inc/files-documentation.isx: QuickStart.txt
	is no longer distributed so it is removed.

2003-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.h (RoundToQuantum): New macro to round positive
	double to Quantum.
	* magick/xwindow.c, magick/xwindow.h, magick/studio.h: Use FreeBSD
	portability fixes from FreeBSD ports collection.