@@ -53,9 +53,25 @@
 </tr>
 </table>
 <p>
+2003-05-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/magick/magick_config.h.in (HAVE_SYS_TYPES_H):
+        Moved this define back from nt_base.h since removing it was
+        causing some problems for Magick++.
+
+</UL>
+<p>
 2003-05-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/image.c: (SetMagickInfo): Don't mask failure to
+        read magic.mgk.<BR>
+  <LI> magick/constitute.c (ReadImage): Don't overwrite specific
+        exception info.<BR>
+  <LI> magick/nt_base.c (NTResourceToBlob): Add logging similar
+        to that used in IsAccessible() in order to make operation
+        more clear.<BR>
   <LI> magick/module.c (FindMagickModule): Removed extraneous
         "Searching for module file" log event.
         (GetModuleBlob): Under Windows, don't clear or overwrite
