@@ -1,3 +1,9 @@
+2003-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* VisualMagick/magick/magick_config.h.in (HAVE_SYS_TYPES_H): 
+	Moved this define back from nt_base.h since removing it was
+	causing some problems for Magick++.
+
 2003-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/image.c: (SetMagickInfo): Don't mask failure to
